Search Workout Bug Fixed

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,17 +5,17 @@
     android:layout_height="match_parent"
     tools:context=".fragments.muscle.SearchFragment">
 
-    <ScrollView
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/muscle_search_listView"/>
+
+    <!--<ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="8sp"
         android:scrollbarSize="8sp">
 
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/muscle_search_listView"/>
-
-    </ScrollView>
+    </ScrollView>-->
 
 </LinearLayout>
